# bazel-examples

./: .gitignore  README.md
.github/: bazel
.github/workflows/: ci.yml
toolchain-arm64-gcc/: .bazelrc  WORKSPACE
toolchain-arm64-gcc-docker/: .bazelrc  WORKSPACE
toolchain-arm64-gcc-docker/toolchain_arm64_gcc_docker/: BUILD  defs.bzl
toolchain-arm64-gcc-modules/: .bazelrc  MODULE.bazel
toolchain-arm64-gcc-modules/example/: BUILD
toolchain-arm64-gcc-modules/toolchain_arm64_gcc/: BUILD  arm64_gcc_linux_x86_64.BUILD
toolchain-arm64-gcc/toolchain_arm64_gcc/: arm64_gcc_linux_x86_64.BUILD  defs.bzl
